# PluginIRMF

./: .gitignore  APIKey.h  CMakeLists.txt  README.md  dllmain.cpp  irmf.cpp  irmf.h
